force-app/main/default/objects/Expense__c/fields/visible__c.field-meta.xml
<CustomField>
    <fullName>visible__c</fullName>
    <label>visible</label>
    <length>25</length>
    <type>Text</type>
</CustomField>