force-app/main/default/objects/Expense__c/fields/WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderId__c</fullName>
    <displayFormat>W-{000000}</displayFormat>
    <label>WorkOrderId</label>
    <type>AutoNumber</type>
</CustomField>